# rust-voice

./: Cargo.toml  README.md
.cargo/: config
model/: Readme.md  grammar.jsgf
pocketsphinx-rs/src/: lib.rs
pocketsphinx-sys/: Cargo.toml  README.md  build.rs
pocketsphinx-sys/src/: glist.rs  hash_table.rs  jsgf.rs  lib.rs  pocketsphinx.rs  ps_search.rs
src/: main.rs
