[package]
name = "pocketsphinx-sys"
version = "0.4.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]

description = "FFI bindings to libpocketsphinx"
homepage = "https://github.com/kriomant/pocketsphinx-sys"
repository = "https://github.com/kriomant/pocketsphinx-sys"
license = "MIT"
readme = "README.md"
keywords = ["pocketsphinx", "voice", "recognition", "audio"]

links = "pocketsphinx"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3.6"

[dependencies]
libc = "0.2.4"
